--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ You have got to get up and work at it to make your dreams come true.</p>
                         <ul>
                             <li><span>phone :</span> +91 8866665963</li>
                           
-                            <li><span>email :</span> devanshishah.resume@gmail.com </li>
+                            <li><span>email :</span> fame.devanshi@gmail.com </li>
                         </ul>
                     </div>
                 </div>
